proboj-prask/games/game1/logs/randomak.txt
Traceback (most recent call last):
  File "C:\Users\horuc\OneDrive\Dokumenty\Prask\SEXY_ROBOT\Batmendijn\proboj-prask\klienti\randomak\player.py", line 2, in <module>
    from probojPlayer import ProbojPlayer
  File "C:\Users\horuc\OneDrive\Dokumenty\Prask\SEXY_ROBOT\Batmendijn\proboj-prask\klienti\randomak\probojPlayer.py", line 5, in <module>
    from unit import Unit, UnitType
  File "C:\Users\horuc\OneDrive\Dokumenty\Prask\SEXY_ROBOT\Batmendijn\proboj-prask\klienti\randomak\unit.py", line 1, in <module>
    from constants import UnitType
  File "C:\Users\horuc\OneDrive\Dokumenty\Prask\SEXY_ROBOT\Batmendijn\proboj-prask\klienti\randomak\constants.py", line 1
    ../../server/constants.py
    ^
SyntaxError: invalid syntax
[proboj] process terminated
 exit: 1
 err: <nil>
